2000-06-15  Akim Demaille  <akim@epita.fr>

	* autoconf.sh (option handling): Give a more understandable
	message when an option is missing its argument.
	* autoreconf.sh: Likewise.
	* autoupdate.sh: Likewise.
	* autoheader.sh: Likewise.

2000-06-13  Akim Demaille  <akim@epita.fr>

	`./config.status -d' is buggy.

	* acgeneral.m4 (_AC_OUTPUT_CONFIG_STATUS): Remove the `shift' in
	--debug.
	* doc/autoconf.texi (Limitations of Builtins): Some about shift.

2000-06-13  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Caching Results): Bigger warning about the
	extremely frequent action-in-commands bug.
	Move the documentation of AC_CACHE_SAVE and AC_CACHE_LOAD...
	(Cache Files): into here.

2000-06-09  Steven G. Johnson  <stevenj@alum.mit.edu>

	* acgeneral.m4 (AC_CHECK_TOOL): Even if VALUE-IF-NOT-FOUND is not
	specified, we should still check whether PROG-TO-CHECK-FOR
	actually works before returning it when the prefixed program is
	not found. Also, fixed a bug where it failed to pass the PATH
	argument in the second call to AC_CHECK_PROG.

2000-06-09  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_CHECK_TOOLS): Rewrite.

2000-06-09  Paul Eggert  <eggert@twinsun.com>

	* doc/autoconf.texi: Use `@option' for options, not `@samp' nor
	`@code'.
	* doc/install.texi: Likewise.

2000-06-09  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (AC_F77_LIBRARY_LDFLAGS): Don't require AC_CYGWIN.
	(AC_F77_NAME_MANGLING): Removed useless comment.
	(_AC_PROG_F77_GNU): Use `.f' not `.fpp' which is not properly
	processed by Abysoft's Fortran compiler.

2000-06-09  Steven G. Johnson  <stevenj@superjdj.mit.edu>

	* aclang.m4 (AC_F77_LIBRARY_LDFLAGS): Fixed bug where
	compiler output to stdout was not caught and interpreted.

2000-06-09  Akim Demaille  <akim@epita.fr>

	`autoconf --trace' dies on filenames with `:'.
	Reported by Mark Elbrecht.

	* autoconf.sh <trace> (trace2m4.sed): Use `..*' instead of
	`[^:][^:]*' to catch file names.  The rest of regex is probably