@@ -154,6 +154,9 @@ instance, there is still AM_PROG_LIBTOOL.  Anyway, since autoupdate
 takes care of them, it is no longer the role of Automake to handle
 this.  Most should be removed.
 
+** AC_EXEXT, AC_OBJEXT
+Support should be enabled by default.
+
 
 ------------------------------------------------------------------------------
 
