@@ -1,3 +1,8 @@
+2000-06-16  Akim Demaille  <akim@epita.fr>
+
+	* acspecific.m4 (AC_EXEEXT, AC_OBJEXT): Don't obsolete them, let
+	them be empty, so that Automake still provide support for $(EXEEXT).
+
 2000-06-15  Akim Demaille  <akim@epita.fr>
 
 	* autoconf.sh (option handling): Give a more understandable
